# coursework

./: .gitignore
client/: CMakeLists.txt  Makefile  api_client.cpp  api_client.h  coursework_client.pro  main.cpp  main_window.cpp  main_window.h  moc_api_client.cpp  moc_main_window.cpp  qml.qrc  test_client_pc.json
client/components/: Card.qml  MenuButton.qml  Notification.qml  NotificationManager.qml  StatCard.qml  qmldir
client/dto/: CategoryDto.h  DepartmentDto.h  PcDto.h  PoDto.h  RoleDto.h  SemiDto.h  UpdatePoCountDto.h  UserDto.h  VersionPoDto.h
client/network/: ApiClient.cpp  ApiClient.h
client/qml/: AdminPage.qml  CategoriesPage.qml  DepartmentsPage.qml  MainWindow.qml  PcPage.qml  PoPage.qml  ReportsPage.qml  RolesPage.qml  SemiPage.qml  UsersPage.qml  VersionPoPage.qml  qmldir
client/release/: coursework_client
client/services/: AdminService.cpp  AdminService.h  CategoryService.cpp  CategoryService.h  DepartmentService.cpp  DepartmentService.h  PcService.cpp  PcService.h  PoService.cpp  PoService.h  ReportService.cpp  ReportService.h  RoleService.cpp  RoleService.h  SemiService.cpp  SemiService.h  UserService.cpp  UserService.h  VersionPoService.cpp  VersionPoService.h
client/viewmodels/: AdminViewModel.cpp  AdminViewModel.h  CategoryViewModel.cpp  CategoryViewModel.h  DepartmentViewModel.cpp  DepartmentViewModel.h  MainViewModel.h  PcViewModel.cpp  PcViewModel.h  PoViewModel.cpp  PoViewModel.h  ReportViewModel.cpp  ReportViewModel.h  RoleViewModel.cpp  RoleViewModel.h  SemiViewModel.cpp  SemiViewModel.h  UserViewModel.cpp  UserViewModel.h  VersionPoViewModel.cpp  VersionPoViewModel.h
server/: .env  Dockerfile  db.hpp  docker-compose.yml  local_server  main.cpp  server.hpp
server/include/: db.hpp
server/routes/: category_routes.cpp  category_routes.h  department_route.h  department_routes.cpp  pc_routes.cpp  pc_routes.h  po_routes.cpp  po_routes.h  report_routes.cpp  report_routes.h  roles_route.h  roles_routes.cpp  semi_routes.cpp  user_route.h  users_routes.cpp  versionpo_routes.cpp
server/tables/: all_tables_single.h  category.h  department.h  pc.h  po.h  roles.h  semi.h  users.h  version_po.h
server/tables/dto/: categoryDTO.h  departmentDTO.h  pcDTO.h  poDTO.h  rolesDTO.h  usersDTO.h  versionPODTO.h
server/tables/models/: categoryDTO.h  departmentDTO.h  pcDTO.h  poDTO.h  rolesDTO.h  semiDTO.h  usersDTO.h  versionPODTO.h
server/tables/orm/: category-odb.cxx  category-odb.hxx  category-odb.ixx  category.sql  department-odb.cxx  department-odb.hxx  department-odb.ixx  department.sql  pc-odb.cxx  pc-odb.hxx  pc-odb.ixx  pc.sql  po-odb.cxx  po-odb.hxx  po-odb.ixx  po.sql  roles-odb.cxx  roles-odb.hxx  roles-odb.ixx  roles.sql  semi-odb.cxx  semi-odb.hxx  semi-odb.ixx  semi.sql  users-odb.cxx  users.sql  (+6 more)
(+1 files in other folders)
